--- a/style.css
+++ b/style.css
@@ -1,50 +1,4 @@
-body{overflow-x: hidden; display: grid;margin: 0;
-}
-ul{list-style-type: none; display: grid;
-}
-ul{ font-family: Georgia, Times, "Times New Roman", serif;display: inline-block; 
-}
-#menuDeBusqueda-hombres{padding-right: 25px; text-decoration: none;position:relative;top: 37px;
-}    
-#menuDeBusqueda-mujeres{position: relative;top:37px
-}
-#menuDeBusqueda-ofertas{position: relative;top:37px
-}
-#menuDeBusqueda-nuevos{position: relative;top:37px
-}
-
-h1{font-family: "EB Garamond";font-size:160px;position:relative;bottom: 62px; left: 95px; display: grid;}
-
-.menuDeBusqueda{color:white;background-color: rgb(94, 91, 91);
-     padding: 3px 1cm 3px 2px;font-size: 20px; text-decoration: none;
-}
-.logoGrande{position: relative;left: 169px;bottom: 160px   ;
-}
-#logoOculos{position:absolute;bottom: 6px;right: 460px;
-}
-.subrayadoRojo{position: relative;left: 180px;;
-}
-
-.padreAnteojos{ display: grid; grid-template-columns: 110px 600px 600px ; grid-template-rows: auto;align-items: center;justify-items: center; 
-}
-.menuDeBusquedaPadre{background-image:url(https://static.elcorreo.com/www/multimedia/202006/07/media/cortadas/opi-portocarrero-kLeC-U110431176796zMD-1248x770@El%20Correo.jpg);background-repeat: repeat;
-          color: white; ; background-size: cover ;position:sticky;
-          display: grid;grid-template-columns: 150px 150px 150px 150px 150px 150px 150px;
-}
-.indexGrande{display: grid;grid-template-rows: 250px 260px 210px;}     
-.chicaPortada{border-style: solid;border-color: black;border-width: 1px;;padding: 8px;position:absolute ;top: 170px;right: 300px;
-}
-.carritoEscrito{position: relative;left: 300px;top: 40px;
-}
-#elCarrito{position: relative;top: 15px;left: 230px
-}
-.lineaFina{position: relative;bottom: 70px;
-}
-.contacto{display: grid;grid-template-rows: auto;position: relative;bottom:80px; left: 860px;
-}
-header{display: grid;}
-#background{background: rgb(233,207,111);background: linear-gradient(90deg, rgba(233,207,111,1) 37%, rgba(230,246,219,1) 100%);}
-
+body{margin: 0%;}
 
 @media screen and (min-width: 1100px){body{overflow-x: hidden; display: grid;
 }
@@ -54,13 +8,17 @@ ul{ font-family: Georgia, Times, "Times New Roman", serif;display: inline-block;
 }
 #menuDeBusqueda-hombres{padding-right: 25px; text-decoration: none;position:relative;top: 37px;
 }    
+#menuDeBusqueda-hombres:hover{font-size: 22px;}
 #menuDeBusqueda-mujeres{position: relative;top:37px
 }
+#menuDeBusqueda-mujeres:hover{font-size: 22px;}
 #menuDeBusqueda-ofertas{position: relative;top:37px
 }
+#menuDeBusqueda-ofertas:hover{font-size: 22px;}
+
 #menuDeBusqueda-nuevos{position: relative;top:37px
 }
-
+#menuDeBusqueda-nuevos:hover{font-size: 22px;}
 
 h1{font-family: "EB Garamond";font-size:160px;position:relative;bottom: 62px; left: 95px; display: grid;height: auto;width: auto;
 }
@@ -75,7 +33,7 @@ h1:hover{;transform: rotate(5deg);}
 }
 #logoOculos{position:absolute;bottom: 6px;right: 460px;animation-name: efectoLogo;animation-iteration-count: 1;animation-timing-function: ease;animation-duration: 3s;animation-delay: 3s;
 }
-@keyframes efectoLogo{0%{width:10px}
+@keyframes efectoLogo{10%{width:10px}
 80%{width: 75px;}
 100%{width: auto;}
 }
