--- a/css/styleresto.css
+++ b/css/styleresto.css
@@ -54,8 +54,7 @@ input:focus{width: 100px;height: 30px;font-size: 16px;}
 
 
 
-@media screen and (max-width: 420px){ 
- #menuDeBusqueda-hombres:hover{font-size: 22px;} 
+@media screen and (max-width: 420px){
 .menuDeBusquedaPadre{display: grid;grid-template-columns: 140px 180px;grid-template-rows: 40px;}
 .carritoEscrito{position: absolute;left: 15px;top: 145px;font-size: 20px}
 #elCarrito{position:; left: 17px; top: 15px;}
@@ -79,7 +78,7 @@ input:focus{width: 100px;height: 30px;font-size: 16px;}
 .comprarBoton{position: absolute;top: 1530px;left: 210px;}
 }
 
-/*@media screen and (min-width:1100){body{overflow-x:hidden ; display: grid;
+@media screen and (min-width:1100){body{overflow-x:hidden ; display: grid;
 }
 ul{list-style-type: none;
 }
