Ya con bootstrap

--- a/css/styleresto.css
+++ b/css/styleresto.css
@@ -12,37 +12,27 @@ ul{ font-family: Georgia, Times, "Times New Roman", serif;display: inline-block;
 #menuDeBusqueda-ofertas:hover{font-size: 22px;}
 #menuDeBusqueda-nuevos{position: relative;top:37px}
 #menuDeBusqueda-nuevos:hover{font-size: 22px;}
-
-h1{font-family: "EB Garamond";;position:relative; left: 15px;bottom: 20px;
+.carritoEscrito{position: relative;left: 410px;top: 30px;color: white;
+}
+#elCarrito{position: relative;top: 15px;left: 400px}
+#logoOculos{position:absolute;bottom: 555px;right: 358px;animation-name: efectoLogo;animation-iteration-count: 1;animation-timing-function: ease;animation-duration: 3s;animation-delay: 3s;
+}
+h1{font-family: "EB Garamond";;position:relative; right: 1px;top: 20px;
      font-size:65px
 }
 .menuDeBusqueda{color:white;background-color: rgb(94, 91, 91);
      padding: 3px 1cm 3px 2px;font-size: 20px; text-decoration: none;
 }
-.subrayadoRojo{position: relative;left: 180px;bottom:90px;
+.subrayadoRojo{position: relative;left: 100px;bottom:190px;
 }
-#logoOculos{position:absolute;bottom: 5px;right: 460px;
-}
-.menuDeBusquedaPadre{background-image:url(https://static.elcorreo.com/www/multimedia/202006/07/media/cortadas/opi-portocarrero-kLeC-U110431176796zMD-1248x770@El%20Correo.jpg);background-repeat: repeat;
-     color: white; ; background-size: cover ;position:sticky;
+.menuDeBusquedaPadre{ color: white; ; background-size: cover ;position:sticky;
      display: grid;grid-template-columns: 150px 150px 150px 150px 150px 150px 150px;
 }
 .chicaPortada{border-style: solid;border-color: black;border-width: 1px;;padding: 8px;position:absolute ;top: 170px;right: 300px;
 }
-.carritoEscrito{position: relative;left: 300px;top: 40px;
-}
-#elCarrito{position: relative;top: 15px;left: 230px}
-
-.padreAnteojos{ display: grid; grid-template-columns: 110px 600px 600px ; grid-template-rows: auto;align-items: center;justify-items: center; 
-}
-.bordeAnteojos{border-style:solid;padding:2px;border-width: 2px;border-color: rgb(38, 6, 68)}
+.border {border: var(--bs-border-width) var(--bs-border-style) #141619!important;
+ }
 .subrayadoRojo{position: absolute;left: 10px;top:230px;
-}
-#typeChico{position: absolute;top: 270px;left: 350px;
-}
-#kareyChico{position: absolute;top: 270px;left: 720px;
-}
-#rqlChico{position: absolute;top: 270px;left: 1050px;
 }
 h4{font-size: 20px;
 }
@@ -109,7 +99,7 @@ h1{font-family: "EB Garamond";;position:relative; left: 15px;bottom: 20px;
 80%{width: 75px;}
 100%{width: auto;}}
 
-.menuDeBusquedaPadre{background-image:url(https://static.elcorreo.com/www/multimedia/202006/07/media/cortadas/opi-portocarrero-kLeC-U110431176796zMD-1248x770@El%20Correo.jpg);background-repeat: repeat;
+.menuDeBusquedaPadre{
      color: white; ; background-size: cover ; 
      display: grid;grid-template-columns: 150px 150px 150px 150px 150px 150px 150px;
 }
@@ -132,7 +122,8 @@ h1{font-family: "EB Garamond";;position:relative; left: 15px;bottom: 20px;
 }
 h4{font-size: 20px;
 }
-.contacto{display: grid;grid-template-rows: auto;position: relative;bottom:10px; left: 860px;}}
+.lineaFina{position: relative;top: 10px;}
+.contacto{display: grid;grid-template-rows: auto;position: absolute;top: 81px; left: 860px;}}
 
 
 
