--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ ul{list-style-type: none; display: grid;
 }
 ul{ font-family: Georgia, Times, "Times New Roman", serif;display: inline-block; 
 }
+
 #menuDeBusqueda-hombres{padding-right: 25px; text-decoration: none;position:relative;top: 37px;
 }    
 #menuDeBusqueda-hombres:hover{font-size: 22px; text-decoration: none;}
@@ -18,38 +19,36 @@ ul{ font-family: Georgia, Times, "Times New Roman", serif;display: inline-block;
 
 #menuDeBusqueda-nuevos{position: relative;top:37px
 }
-#menuDeBusqueda-nuevos:hover{font-size: 22px;}
-
-h1{font-family: "EB Garamond";font-size:160px;position:relative;bottom: 20px; left: 95px; display: grid;height: auto;width: auto;
+#menuDeBusqueda-nuevos:hover{font-size: 22px;
 }
-
-
+.carritoEscrito{position: relative;left: 410px;top: 30px; color: white;
+}
+#elCarrito{position: relative;top: 15px;left: 400px
+}
+#logoOculos{position:absolute;bottom: 555px;right: 358px;animation-name: efectoLogo;animation-iteration-count: 1;animation-timing-function: ease;animation-duration: 3s;animation-delay: 3s;
+}
 .menuDeBusqueda{color: white;background-color: rgb(94, 91, 91);
      padding: 3px 1cm 3px 2px;font-size: 20px; text-decoration: none;
 }
-.logoGrande{position: relative;left: 169px;bottom: 160px   ;
+h1{font-family: "EB Garamond";font-size:160px;position:relative;bottom: 20px; left: 95px; display: grid;height: auto;width: auto;
 }
-#logoOculos{position:absolute;bottom: 6px;right: 460px;animation-name: efectoLogo;animation-iteration-count: 1;animation-timing-function: ease;animation-duration: 3s;animation-delay: 3s;
+.logoGrande{position: relative;left: 169px;bottom: 160px   ;
 }
 @keyframes efectoLogo{10%{width:10px}
 80%{width: 75px;}
 100%{width: auto;}
 }
-.subrayadoRojo{position: relative;left: 180px;height: auto;width: auto ;
+.subrayadoRojo{position: relative;left: 175px; bottom:60px;height: auto;width: auto ;
 }
-.subrayadoRojo{transform: translate(0px,-10px);}
-.padreAnteojos{ display: grid; grid-template-columns: 110px 600px 600px ; grid-template-rows: auto;align-items: center;justify-items: center; 
+.subrayadoRojo{transform: translate(0px,-10px);
 }
-.menuDeBusquedaPadre{background-image:url(https://static.elcorreo.com/www/multimedia/202006/07/media/cortadas/opi-portocarrero-kLeC-U110431176796zMD-1248x770@El%20Correo.jpg);background-repeat: repeat; background-position-y: center;px;
+.menuDeBusquedaPadre{
           color: white; ; background-size: cover ;position: sticky;
-          display: grid;grid-template-columns: 150px 150px 150px 150px 150px 150px 150px;
+          display: grid;grid-template-columns: 150px 150px 150px 150px 150px 150px 150px; 
 }
-.indexGrande{display: grid;grid-template-rows: 250px 260px 210px;}     
+.indexGrande{display: grid;grid-template-rows: 250px 260px 210px;
+}     
 .chicaPortada{border-style: solid;border-color: black;border-width: 1px;;padding: 8px;position:absolute ;top: 170px;right: 300px;
-}
-.carritoEscrito{position: relative;left: 300px;top: 40px;
-}
-#elCarrito{position: relative;top: 15px;left: 230px
 }
 .lineaFina{position: relative;bottom: 90px; z-index: -1;
 }
