--- a/css/styleresto.css
+++ b/css/styleresto.css
@@ -40,86 +40,84 @@ h4{font-size: 20px;
 .contacto{display: grid;grid-template-rows: auto;position: relative;bottom:10px; left: 860px;}
 input:focus{width: 100px;height: 30px;font-size: 16px;}
 
-
-
-
-
-@media screen and (max-width: 420px){
+@media screen and (max-width: 420px)
+{body{overflow-x: hidden;}
 .menuDeBusquedaPadre{display: grid;grid-template-columns: 140px 180px;grid-template-rows: 40px;}
-.carritoEscrito{position: absolute;left: 15px;top: 145px;font-size: 20px}
-#elCarrito{position:; left: 17px; top: 15px;}
-#logoOculos{position: absolute;top: 218px; right: 1130px;}
-.subrayadoRojo{position:absolute;top:330px}
-#anteojosRojos1{position: relative;right: 218px;}
-#rojoPalabras{position: relative;right: 210px;}
-#precioRojos{position: relative;right: 210px;}
-#anteojosFul{position: relative;top: 440px; right: 818px;}
-#palabrasFul{position: relative;top: 450px;right: 810px;}
-#precioFul{position: relative;top: 450px;right: 810px;}
-.contacto{position: relative;left: 20px;top: 950px;}
-.lineaFina{position: relative;top: 500px;}
-.tuCarritoescritou{font-size: 57px;position: relative;}
-.lineaFinaCarro{position: relative;top: 950px;}
-.totalPrecio{position: absolute;top: 1500px;left: 70px;}
-.comprarBoton{position: absolute;top: 1530px;left: 210px;}
+.carritoEscrito{position: absolute;left: 29px;top: 800px;font-size: 20px}
+#elCarrito{position:absolute ;left: 189px; top:780px;}
+h1{font-family: "EB Garamond";font-size:90px;position:relative;top: 35px; left: 8px; display: grid;}
+#logoOculos{position: absolute;top: 100px; right: 26px;}
+.logoGrande{position:relative;left: 1000px;}
+.chicaPortada{position: absolute;left: 30px;top: 450px;}
+.subrayadoRojo{position: absolute;left:19px;top: 270px;}
+.contacto{position: relative;left: 65px;}
+.menuDeBusqueda{color: white;background-color: rgb(94, 91, 91);
+     padding: 3px 1cm 3px 2px;font-size: 20px; text-decoration: none;
+}
+#menuDeBusqueda-hombres{padding-right: 25px; text-decoration: none;position:absolute;top: 1px;
+}    
+#menuDeBusqueda-hombres:hover{font-size: 22px; text-decoration: none;position:absolute;top:2x}
+#menuDeBusqueda-mujeres{padding-right: 25px; text-decoration: none;position:absolute;top: 50px;left: 49px;
+}
+#menuDeBusqueda-mujeres:hover{font-size: 22px;}
+#menuDeBusqueda-ofertas{position: absolute;top:2px;right: 60px;}
+#menuDeBusqueda-ofertas:hover{font-size: 22px;}
+#menuDeBusqueda-nuevos{position: absolute;top:49px;right: 60px;
+}
+#menuDeBusqueda-nuevos:hover{font-size: 22px;
+}
+.logoGrande{position:absolute;left: 569px;bottom: 160px   ;max-width: min-content;
+}
+.chicaPortada{position: relative;top: 1px;}
+
+
+
 }
 
+
+
+
+
 @media screen and (min-width:1100){body{overflow-x:hidden ; display: grid;
+}
+body{overflow-x:hidden ; display: grid;margin: 0;
 }
 ul{list-style-type: none;
 }
 ul{ font-family: Georgia, Times, "Times New Roman", serif;display: inline-block; 
 }
-#menuDeBusqueda-hombres{padding-right: 29px; text-decoration: none;position:relative;top: 37px;}  
-#menuDeBusqueda-hombres:hover{font-size: 2px;}  
+#menuDeBusqueda-hombres{padding-right: 25px; text-decoration: none;position:relative;top: 37px;}    
+#menuDeBusqueda-hombres:hover{font-size: 22px;}  
 #menuDeBusqueda-mujeres{position: relative;top:37px}
 #menuDeBusqueda-mujeres:hover{font-size: 22px;}
 #menuDeBusqueda-ofertas{position: relative;top:37px}
 #menuDeBusqueda-ofertas:hover{font-size: 22px;}
 #menuDeBusqueda-nuevos{position: relative;top:37px}
 #menuDeBusqueda-nuevos:hover{font-size: 22px;}
-
-h1{font-family: "EB Garamond";;position:relative; left: 15px;bottom: 20px;
+.carritoEscrito{position: relative;left: 410px;top: 30px;color: white;
+}
+#elCarrito{position: relative;top: 15px;left: 400px}
+#logoOculos{position:absolute;bottom: 555px;right: 358px;animation-name: efectoLogo;animation-iteration-count: 1;animation-timing-function: ease;animation-duration: 3s;animation-delay: 3s;
+}
+h1{font-family: "EB Garamond";;position:relative; right: 1px;top: 20px;
      font-size:65px
 }
 .menuDeBusqueda{color:white;background-color: rgb(94, 91, 91);
      padding: 3px 1cm 3px 2px;font-size: 20px; text-decoration: none;
 }
-.subrayadoRojo{position: relative;left: 180px;bottom:90px;
+.subrayadoRojo{position: relative;left: 100px;bottom:190px;
 }
-
-
-#logoOculos{position:absolute;bottom: 5px;right: 460px;animation-name: efectoLogo;animation-iteration-count: 1;animation-timing-function: ease;animation-duration: 3s;animation-delay: 3s;
-}
-@keyframes efectoLogo{10%{width:10px}
-80%{width: 75px;}
-100%{width: auto;}}
-
-.menuDeBusquedaPadre{
-     color: white; ; background-size: cover ; 
+.menuDeBusquedaPadre{ color: white; ; background-size: cover ;position:sticky;
      display: grid;grid-template-columns: 150px 150px 150px 150px 150px 150px 150px;
 }
 .chicaPortada{border-style: solid;border-color: black;border-width: 1px;;padding: 8px;position:absolute ;top: 170px;right: 300px;
 }
-.carritoEscrito{position: relative;left: 300px;top: 40px;
+.border {border: var(--bs-border-width) var(--bs-border-style) #141619!important;
+ }
+.subrayadoRojo{position: absolute;left: 10px;top:230px;
 }
-#elCarrito{position: relative;top: 15px;left: 230px
-}
-.padreAnteojos{ display: grid; grid-template-columns: 110px 600px 600px ; grid-template-rows: auto;align-items: center;justify-items: center; 
-}
-.bordeAnteojos{border-style:solid;padding:2px;border-width: 2px;border-color: rgb(38, 6, 68)}
-.subrayadoRojo{position: absolute;left: 10px;top:230px;}         
 h4{font-size: 20px;
 }
-.lineaFina{position: relative;top: 10px;}
-.contacto{display: grid;grid-template-rows: auto;position: absolute;top: 81px; left: 860px;}}
 
-
-
-
-
-
-
-
-
-
+.contacto{display: grid;grid-template-rows: auto;position: relative;bottom:10px; left: 860px;}
+input:focus{width: 100px;height: 30px;font-size: 16px;}
