--- a/css/styleresto.css
+++ b/css/styleresto.css
@@ -1,123 +1,437 @@
-body{overflow-x:hidden ; display: grid;margin: 0;
+body {
+  overflow-x: hidden;
+  display: grid;
+  margin: 0;
 }
-ul{list-style-type: none;
-}
-ul{ font-family: Georgia, Times, "Times New Roman", serif;display: inline-block; 
-}
-#menuDeBusqueda-hombres{padding-right: 25px; text-decoration: none;position:relative;top: 37px;}    
-#menuDeBusqueda-hombres:hover{font-size: 22px;}  
-#menuDeBusqueda-mujeres{position: relative;top:37px}
-#menuDeBusqueda-mujeres:hover{font-size: 22px;}
-#menuDeBusqueda-ofertas{position: relative;top:37px}
-#menuDeBusqueda-ofertas:hover{font-size: 22px;}
-#menuDeBusqueda-nuevos{position: relative;top:37px}
-#menuDeBusqueda-nuevos:hover{font-size: 22px;}
-.carritoEscrito{position: relative;left: 410px;top: 30px;color: white;
-}
-#elCarrito{position: relative;top: 15px;left: 400px}
-#logoOculos{position:absolute;bottom: 555px;right: 358px;animation-name: efectoLogo;animation-iteration-count: 1;animation-timing-function: ease;animation-duration: 3s;animation-delay: 3s;
-}
-h1{font-family: "EB Garamond";;position:relative; right: 1px;top: 20px;
-     font-size:65px
-}
-.menuDeBusqueda{color:white;background-color: rgb(94, 91, 91);
-     padding: 3px 1cm 3px 2px;font-size: 20px; text-decoration: none;
-}
-.subrayadoRojo{position: relative;left: 100px;bottom:190px;
-}
-.menuDeBusquedaPadre{ color: white; ; background-size: cover ;position:sticky;
-     display: grid;grid-template-columns: 150px 150px 150px 150px 150px 150px 150px;
-}
-.chicaPortada{border-style: solid;border-color: black;border-width: 1px;;padding: 8px;position:absolute ;top: 170px;right: 300px;
-}
-.border {border: var(--bs-border-width) var(--bs-border-style) #141619!important;
- }
-.subrayadoRojo{position: absolute;left: 10px;top:230px;
-}
-h4{font-size: 20px;
+@import "color";
+ul {
+  list-style-type: none;
 }
 
-.contacto{display: grid;grid-template-rows: auto;position: relative;bottom:10px; left: 860px;}
-input:focus{width: 100px;height: 30px;font-size: 16px;}
-
-@media screen and (max-width: 420px)
-{body{overflow-x: hidden;}
-.menuDeBusquedaPadre{display: grid;grid-template-columns: 140px 180px;grid-template-rows: 40px;}
-.carritoEscrito{position: absolute;left: 29px;top: 800px;font-size: 20px}
-#elCarrito{position:absolute ;left: 189px; top:780px;}
-h1{font-family: "EB Garamond";font-size:90px;position:relative;top: 35px; left: 8px; display: grid;}
-#logoOculos{position: absolute;top: 100px; right: 26px;}
-.logoGrande{position:relative;left: 1000px;}
-.chicaPortada{position: absolute;left: 30px;top: 450px;}
-.subrayadoRojo{position: absolute;left:19px;top: 270px;}
-.contacto{position: relative;left: 65px;}
-.menuDeBusqueda{color: white;background-color: rgb(94, 91, 91);
-     padding: 3px 1cm 3px 2px;font-size: 20px; text-decoration: none;
-}
-#menuDeBusqueda-hombres{padding-right: 25px; text-decoration: none;position:absolute;top: 1px;
-}    
-#menuDeBusqueda-hombres:hover{font-size: 22px; text-decoration: none;position:absolute;top:2x}
-#menuDeBusqueda-mujeres{padding-right: 25px; text-decoration: none;position:absolute;top: 50px;left: 49px;
-}
-#menuDeBusqueda-mujeres:hover{font-size: 22px;}
-#menuDeBusqueda-ofertas{position: absolute;top:2px;right: 60px;}
-#menuDeBusqueda-ofertas:hover{font-size: 22px;}
-#menuDeBusqueda-nuevos{position: absolute;top:49px;right: 60px;
-}
-#menuDeBusqueda-nuevos:hover{font-size: 22px;
-}
-.logoGrande{position:absolute;left: 569px;bottom: 160px   ;max-width: min-content;
-}
-.chicaPortada{position: relative;top: 1px;}
-
-
-
+ul {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  display: inline-block;
 }
 
-
-
-
-
-@media screen and (min-width:1100){body{overflow-x:hidden ; display: grid;
+#menuDeBusqueda-hombres {
+  padding-right: 25px;
+  text-decoration: none;
+  position: relative;
+  top: 37px;
 }
-body{overflow-x:hidden ; display: grid;margin: 0;
-}
-ul{list-style-type: none;
-}
-ul{ font-family: Georgia, Times, "Times New Roman", serif;display: inline-block; 
-}
-#menuDeBusqueda-hombres{padding-right: 25px; text-decoration: none;position:relative;top: 37px;}    
-#menuDeBusqueda-hombres:hover{font-size: 22px;}  
-#menuDeBusqueda-mujeres{position: relative;top:37px}
-#menuDeBusqueda-mujeres:hover{font-size: 22px;}
-#menuDeBusqueda-ofertas{position: relative;top:37px}
-#menuDeBusqueda-ofertas:hover{font-size: 22px;}
-#menuDeBusqueda-nuevos{position: relative;top:37px}
-#menuDeBusqueda-nuevos:hover{font-size: 22px;}
-.carritoEscrito{position: relative;left: 410px;top: 30px;color: white;
-}
-#elCarrito{position: relative;top: 15px;left: 400px}
-#logoOculos{position:absolute;bottom: 555px;right: 358px;animation-name: efectoLogo;animation-iteration-count: 1;animation-timing-function: ease;animation-duration: 3s;animation-delay: 3s;
-}
-h1{font-family: "EB Garamond";;position:relative; right: 1px;top: 20px;
-     font-size:65px
-}
-.menuDeBusqueda{color:white;background-color: rgb(94, 91, 91);
-     padding: 3px 1cm 3px 2px;font-size: 20px; text-decoration: none;
-}
-.subrayadoRojo{position: relative;left: 100px;bottom:190px;
-}
-.menuDeBusquedaPadre{ color: white; ; background-size: cover ;position:sticky;
-     display: grid;grid-template-columns: 150px 150px 150px 150px 150px 150px 150px;
-}
-.chicaPortada{border-style: solid;border-color: black;border-width: 1px;;padding: 8px;position:absolute ;top: 170px;right: 300px;
-}
-.border {border: var(--bs-border-width) var(--bs-border-style) #141619!important;
- }
-.subrayadoRojo{position: absolute;left: 10px;top:230px;
-}
-h4{font-size: 20px;
+#menuDeBusqueda-hombres:hover {
+  font-size: 22px;
+  color: white;
 }
 
-.contacto{display: grid;grid-template-rows: auto;position: relative;bottom:10px; left: 860px;}
-input:focus{width: 100px;height: 30px;font-size: 16px;}
+#menuDeBusqueda-mujeres {
+  position: relative;
+  top: 37px;
+}
+#menuDeBusqueda-mujeres:hover {
+  font-size: 22px;
+  color: white;
+}
+
+#menuDeBusqueda-ofertas {
+  position: relative;
+  top: 37px;
+}
+#menuDeBusqueda-ofertas:hover {
+  font-size: 22px;
+  color: white;
+}
+
+#menuDeBusqueda-nuevos {
+  position: relative;
+  top: 37px;
+}
+#menuDeBusqueda-nuevos:hover {
+  font-size: 22px;
+  color: white;
+}
+
+.carritoEscrito {
+  position: relative;
+  left: 410px;
+  top: 30px;
+  color: white;
+}
+
+#elCarrito {
+  position: relative;
+  top: 15px;
+  left: 400px;
+}
+
+#logoOculos {
+  position: absolute;
+  bottom: 555px;
+  right: 358px;
+  -webkit-animation-name: efectoLogo;
+          animation-name: efectoLogo;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+h1 {
+  font-family: "EB Garamond";
+  position: relative;
+  right: 1px;
+  top: 20px;
+  font-size: 65px;
+}
+
+.menuDeBusqueda {
+  color: white;
+  background-color:rgb(94, 91, 91);
+  padding: 3px 1cm 3px 2px;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.subrayadoRojo {
+  position: relative;
+  left: 100px;
+  bottom: 190px;
+}
+
+.menuDeBusquedaPadre {
+  color: white;
+  background-size: cover;
+  position: -webkit-sticky;
+  position: sticky;
+  display: grid;
+  grid-template-columns: 150px 150px 150px 150px 150px 150px 150px;
+}
+
+.chicaPortada {
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  padding: 8px;
+  position: absolute;
+  top: 170px;
+  right: 300px;
+}
+
+.border {
+  border: var(--bs-border-width) var(--bs-border-style) #141619 !important;
+}
+
+.subrayadoRojo {
+  position: absolute;
+  left: 10px;
+  top: 230px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+.contacto {
+  display: grid;
+  grid-template-rows: auto;
+  position: relative;
+  bottom: 10px;
+  left: 860px;
+}
+
+input:focus {
+  width: 100px;
+  height: 30px;
+  font-size: 16px;
+}
+
+@media screen and (max-width: 420px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .menuDeBusquedaPadre {
+    display: grid;
+    grid-template-columns: 140px 180px;
+    grid-template-rows: 40px;
+  }
+
+  .carritoEscrito {
+    position: absolute;
+    left: 29px;
+    top: 800px;
+    font-size: 20px;
+  }
+
+  #elCarrito {
+    position: absolute;
+    left: 189px;
+    top: 780px;
+  }
+
+  h1 {
+    font-family: "EB Garamond";
+    font-size: 90px;
+    position: relative;
+    top: 35px;
+    left: 8px;
+    display: grid;
+  }
+
+  #logoOculos {
+    position: absolute;
+    top: 100px;
+    right: 26px;
+  }
+
+  .logoGrande {
+    position: relative;
+    left: 1000px;
+  }
+
+  .chicaPortada {
+    position: absolute;
+    left: 30px;
+    top: 450px;
+  }
+
+  .subrayadoRojo {
+    position: absolute;
+    left: 19px;
+    top: 270px;
+  }
+
+  .contacto {
+    position: relative;
+    left: 65px;
+  }
+
+  .menuDeBusqueda {
+    color: white;
+    background-color: rgb(94, 91, 91);
+    padding: 3px 1cm 3px 2px;
+    font-size: 20px;
+    text-decoration: none;
+  }
+
+  #menuDeBusqueda-hombres {
+    padding-right: 25px;
+    text-decoration: none;
+    position: absolute;
+    top: 1px;
+  }
+  #menuDeBusqueda-hombres:hover {
+    font-size: 22px;
+    text-decoration: none;
+    position: absolute;
+    top: 2;
+    color: white;
+  }
+
+  #menuDeBusqueda-mujeres {
+    padding-right: 25px;
+    text-decoration: none;
+    position: absolute;
+    top: 50px;
+    left: 49px;
+  }
+  #menuDeBusqueda-mujeres:hover {
+    font-size: 22px;
+    color: white;
+  }
+
+  #menuDeBusqueda-ofertas {
+    position: absolute;
+    top: 2px;
+    right: 60px;
+  }
+  #menuDeBusqueda-ofertas:hover {
+    font-size: 22px;
+    color: white;
+  }
+
+  #menuDeBusqueda-nuevos {
+    position: absolute;
+    top: 49px;
+    right: 60px;
+  }
+  #menuDeBusqueda-nuevos:hover {
+    font-size: 22px;
+    color: white;
+  }
+
+  .logoGrande {
+    position: absolute;
+    left: 569px;
+    bottom: 160px;
+    max-width: -webkit-min-content;
+    max-width: -moz-min-content;
+    max-width: min-content;
+  }
+
+  .chicaPortada {
+    position: relative;
+    top: 1px;
+  }
+}
+@media screen and (min-width: 1100) {
+  body {
+    overflow-x: hidden;
+    display: grid;
+  }
+
+  body {
+    overflow-x: hidden;
+    display: grid;
+    margin: 0;
+  }
+
+  ul {
+    list-style-type: none;
+  }
+
+  ul {
+    font-family: Georgia, Times, "Times New Roman", serif;
+    display: inline-block;
+  }
+
+  #menuDeBusqueda-hombres {
+    padding-right: 25px;
+    text-decoration: none;
+    position: relative;
+    top: 37px;
+  }
+
+  #menuDeBusqueda-hombres:hover {
+    font-size: 22px;
+  }
+
+  #menuDeBusqueda-mujeres {
+    position: relative;
+    top: 37px;
+  }
+
+  #menuDeBusqueda-mujeres:hover {
+    font-size: 22px;
+  }
+
+  #menuDeBusqueda-ofertas {
+    position: relative;
+    top: 37px;
+  }
+
+  #menuDeBusqueda-ofertas:hover {
+    font-size: 22px;
+  }
+
+  #menuDeBusqueda-nuevos {
+    position: relative;
+    top: 37px;
+  }
+
+  #menuDeBusqueda-nuevos:hover {
+    font-size: 22px;
+  }
+
+  .carritoEscrito {
+    position: relative;
+    left: 410px;
+    top: 30px;
+    color: white;
+  }
+
+  #elCarrito {
+    position: relative;
+    top: 15px;
+    left: 400px;
+  }
+
+  #logoOculos {
+    position: absolute;
+    bottom: 555px;
+    right: 358px;
+    -webkit-animation-name: efectoLogo;
+            animation-name: efectoLogo;
+    -webkit-animation-iteration-count: 1;
+            animation-iteration-count: 1;
+    -webkit-animation-timing-function: ease;
+            animation-timing-function: ease;
+    -webkit-animation-duration: 3s;
+            animation-duration: 3s;
+    -webkit-animation-delay: 3s;
+            animation-delay: 3s;
+  }
+
+  h1 {
+    font-family: "EB Garamond";
+    position: relative;
+    right: 1px;
+    top: 20px;
+    font-size: 65px;
+  }
+
+  .menuDeBusqueda {
+    color: white;
+    background-color: rgb(94, 91, 91);
+    padding: 3px 1cm 3px 2px;
+    font-size: 20px;
+    text-decoration: none;
+  }
+
+  .subrayadoRojo {
+    position: relative;
+    left: 100px;
+    bottom: 190px;
+  }
+
+  .menuDeBusquedaPadre {
+    color: white;
+    background-size: cover;
+    position: -webkit-sticky;
+    position: sticky;
+    display: grid;
+    grid-template-columns: 150px 150px 150px 150px 150px 150px 150px;
+  }
+
+  .chicaPortada {
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    padding: 8px;
+    position: absolute;
+    top: 170px;
+    right: 300px;
+  }
+
+  .border {
+    border: var(--bs-border-width) var(--bs-border-style) #141619 !important;
+  }
+
+  .subrayadoRojo {
+    position: absolute;
+    left: 10px;
+    top: 230px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
+
+  .contacto {
+    display: grid;
+    grid-template-rows: auto;
+    position: relative;
+    bottom: 10px;
+    left: 860px;
+  }
+
+  input:focus {
+    width: 100px;
+    height: 30px;
+    font-size: 16px;
+  }
+}/*# sourceMappingURL=styleresto.css.map */
