--- a/css/styleresto.scss
+++ b/css/styleresto.scss
@@ -1,4 +1,10 @@
 @import "color";
+body{margin: 0%;}
+@import "color";
+$mapaColor:(viole:#42033d
+gri:#5e5b5b
+blanc:#ffffff
+);
 body{overflow-x:hidden ; display: grid;margin: 0;
 }
 ul{list-style-type: none;
@@ -10,10 +16,10 @@ ul{ font-family: Georgia, Times, "Times New Roman", serif;display: inline-block;
 
 #menuDeBusqueda-mujeres{position: relative;top:37px;
 &:hover{font-size: 22px;color: white;}}
-
+/*.menuDeBusqueda-ofertas{@include .menuDeBusqueda-mujeres} */ 
 #menuDeBusqueda-ofertas{position: relative;top:37px;
 &:hover{font-size: 22px;color: white;}}
-
+/*.menuDeBusqueda-nuevos{@include .menuDeBusqueda-mujeres} */ 
 #menuDeBusqueda-nuevos{position: relative;top:37px;
 &:hover{font-size: 22px;color: white;}}
 
@@ -31,7 +37,7 @@ h1{font-family: "EB Garamond";;position:relative; right: 1px;top: 20px;
 }
 .subrayadoRojo{position: relative;left: 100px;bottom:190px;
 }
-.menuDeBusquedaPadre{ color: white; ; background-size: cover ;position:sticky;
+.menuDeBusquedaPadre{ @extend .menuDeBusqueda;color: white;  background-size: cover ;position:sticky;
      display: grid;grid-template-columns: 150px 150px 150px 150px 150px 150px 150px;
 }
 .chicaPortada{border-style: solid;border-color: black;border-width: 1px;;padding: 8px;position:absolute ;top: 170px;right: 300px;
@@ -129,7 +135,7 @@ ul{ font-family: Georgia, Times, "Times New Roman", serif;display: inline-block;
 h1{font-family: "EB Garamond";;position:relative; right: 1px;top: 20px;
      font-size:65px
 }
-.menuDeBusqueda{color:white;background-color:rgb(94, 91, 91)
+.menuDeBusqueda{color:white;background-color:rgb(94, 91, 91);
      padding: 3px 1cm 3px 2px;font-size: 20px; text-decoration: none;
 }
 .subrayadoRojo{position: relative;left: 100px;bottom:190px;
@@ -148,4 +154,4 @@ h4{font-size: 20px;
 
 .contacto{display: grid;grid-template-rows: auto;position: relative;bottom:10px; left: 860px;}
 input:focus{width: 100px;height: 30px;font-size: 16px;}
-}   
+}
